Fixed startup bugs Added JSON custom vehicle support Reworked PurchaseMenu to allow for custom groups on-the-go
Took 7 hours 44 minutes